--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Sear Club</title>
+  <link rel="icon" href="SEAR_LOGO.jpg" type="image/jpeg" />
+  <link rel="apple-touch-icon" href="SEAR_LOGO.jpg" />
+  <meta name="theme-color" content="#0b1020" />
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -26,6 +29,20 @@
           <li><a href="#">About</a></li>
           <li><a href="#">Blog</a></li>
           <li><a href="#">Members</a></li>
+          <li>
+  <a href="https://www.instagram.com/sear_ccsu/" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
+    <svg class="instagram-logo" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+      <path fill="currentColor" d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 
+        2.243 5 5 5h10c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zm0 
+        2h10c1.654 0 3 1.346 3 3v10c0 1.654-1.346 3-3 
+        3H7c-1.654 0-3-1.346-3-3V7c0-1.654 1.346-3 
+        3-3zm5 2.5a5.5 5.5 0 100 11 5.5 5.5 
+        0 000-11zm0 2a3.5 3.5 0 110 7 3.5 
+        3.5 0 010-7zm5.25-2a1.25 1.25 0 
+        100 2.5 1.25 1.25 0 000-2.5z"/>
+    </svg>
+  </a>
+</li>
         </ul>
       </nav>
     </div>
