--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- Your site header/content on TOP of particles -->
   <header class="header">
     <div class="inner_header">
-        <a href="/" class="logo_container">
+        <a href="https://antdominator.github.io/Sear/" class="logo_container">
             <img src="SEAR_LOGO.jpg" alt="Site Logo">
         </a>
       <nav>
@@ -43,6 +43,16 @@
     </svg>
   </a>
 </li>
+
+<li>
+  <a href="https://www.discord.gg/8eZdvzqsKb" target="_blank" rel="noopener noreferrer" aria-label="Discord">
+    <svg class="discord-logo" viewBox="0 0 71 55" xmlns="http://www.w3.org/2000/svg">
+      <path fill="currentColor" d="M60.1 4.9A58.12 58.12 0 0046.7 0l-2.2 4.5c-6.5-.9-13-.9-19.4 0L23 0a58.12 58.12 0 00-13.3 4.9C3.6 17.2 1 29.1 2.2 40.8A59.3 59.3 0 0019.6 55l3.1-5.3c-1.7-.6-3.3-1.4-4.9-2.4l1.1-.8c9.3 4.3 20.1 4.3 29.4 0l1.1.8c-1.6 1-3.2 1.8-4.9 2.4L51.4 55a59.3 59.3 0 0017.4-14.2c1.4-11.7-1.3-23.6-8.7-35.9zM24 37.7c-3.3 0-6-3-6-6.6 0-3.7 2.7-6.6 6-6.6 3.4 0 6.1 3 6 6.6 0 3.7-2.6 6.6-6 6.6zm23.1 0c-3.3 0-6-3-6-6.6 0-3.7 2.7-6.6 6-6.6 3.4 0 6.1 3 6 6.6 0 3.7-2.6 6.6-6 6.6z"/>
+    </svg>
+  </a>
+</li>
+
+
         </ul>
       </nav>
     </div>
