--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Sear Club</title>
+
+  <!-- Icons / Meta -->
   <link rel="icon" href="SEAR_LOGO.jpg" type="image/jpeg" />
   <link rel="apple-touch-icon" href="SEAR_LOGO.jpg" />
   <meta name="theme-color" content="#0b1020" />
+
+  <!-- Styles -->
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -18,50 +22,69 @@
     <span class="js-count-particles">--</span> particles
   </div>
 
-  <!-- Your site header/content on TOP of particles -->
+  <!-- Header -->
   <header class="header">
     <div class="inner_header">
-        <a href="https://antdominator.github.io/Sear/" class="logo_container">
-            <img src="SEAR_LOGO.jpg" alt="Site Logo">
-        </a>
-      <nav>
+
+      <!-- Logo: acts as HOME on desktop, toggles drawer on mobile -->
+      <a href="/" class="logo_container" id="logoToggle" aria-label="Sear Club Home / Menu">
+        <img src="SEAR_LOGO.jpg" alt="Site Logo" />
+      </a>
+
+      <!-- Desktop nav (hidden on mobile via CSS) -->
+      <nav class="desktop-nav">
         <ul class="nav">
           <li><a href="#">About</a></li>
           <li><a href="#">Blog</a></li>
           <li><a href="#">Members</a></li>
+
+          <!-- Instagram -->
           <li>
-  <a href="https://www.instagram.com/sear_ccsu/" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
-    <svg class="instagram-logo" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-      <path fill="currentColor" d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 
-        2.243 5 5 5h10c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zm0 
-        2h10c1.654 0 3 1.346 3 3v10c0 1.654-1.346 3-3 
-        3H7c-1.654 0-3-1.346-3-3V7c0-1.654 1.346-3 
-        3-3zm5 2.5a5.5 5.5 0 100 11 5.5 5.5 
-        0 000-11zm0 2a3.5 3.5 0 110 7 3.5 
-        3.5 0 010-7zm5.25-2a1.25 1.25 0 
-        100 2.5 1.25 1.25 0 000-2.5z"/>
-    </svg>
-  </a>
-</li>
+            <a href="https://www.instagram.com/sear_ccsu/" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
+              <svg class="instagram-logo" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path fill="currentColor" d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 
+                  2.243 5 5 5h10c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zm0 
+                  2h10c1.654 0 3 1.346 3 3v10c0 1.654-1.346 3-3 
+                  3H7c-1.654 0-3-1.346-3-3V7c0-1.654 1.346-3 
+                  3-3zm5 2.5a5.5 5.5 0 100 11 5.5 5.5 
+                  0 000-11zm0 2a3.5 3.5 0 110 7 3.5 
+                  3.5 0 010-7zm5.25-2a1.25 1.25 0 
+                  100 2.5 1.25 1.25 0 000-2.5z"/>
+              </svg>
+            </a>
+          </li>
 
-<li>
-  <a href="https://www.discord.gg/8eZdvzqsKb" target="_blank" rel="noopener noreferrer" aria-label="Discord">
-    <svg class="discord-logo" viewBox="0 0 71 55" xmlns="http://www.w3.org/2000/svg">
-      <path fill="currentColor" d="M60.1 4.9A58.12 58.12 0 0046.7 0l-2.2 4.5c-6.5-.9-13-.9-19.4 0L23 0a58.12 58.12 0 00-13.3 4.9C3.6 17.2 1 29.1 2.2 40.8A59.3 59.3 0 0019.6 55l3.1-5.3c-1.7-.6-3.3-1.4-4.9-2.4l1.1-.8c9.3 4.3 20.1 4.3 29.4 0l1.1.8c-1.6 1-3.2 1.8-4.9 2.4L51.4 55a59.3 59.3 0 0017.4-14.2c1.4-11.7-1.3-23.6-8.7-35.9zM24 37.7c-3.3 0-6-3-6-6.6 0-3.7 2.7-6.6 6-6.6 3.4 0 6.1 3 6 6.6 0 3.7-2.6 6.6-6 6.6zm23.1 0c-3.3 0-6-3-6-6.6 0-3.7 2.7-6.6 6-6.6 3.4 0 6.1 3 6 6.6 0 3.7-2.6 6.6-6 6.6z"/>
-    </svg>
-  </a>
-</li>
-
-
+          <!-- Discord -->
+          <li>
+            <a href="https://discord.gg/YOUR_INVITE_CODE" target="_blank" rel="noopener noreferrer" aria-label="Discord">
+              <svg class="discord-logo" viewBox="0 0 71 55" xmlns="http://www.w3.org/2000/svg">
+                <path fill="currentColor" d="M60.1 4.9A58.12 58.12 0 0046.7 0l-2.2 4.5c-6.5-.9-13-.9-19.4 0L23 0a58.12 58.12 0 00-13.3 4.9C3.6 17.2 1 29.1 2.2 40.8A59.3 59.3 0 0019.6 55l3.1-5.3c-1.7-.6-3.3-1.4-4.9-2.4l1.1-.8c9.3 4.3 20.1 4.3 29.4 0l1.1.8c-1.6 1-3.2 1.8-4.9 2.4L51.4 55a59.3 59.3 0 0017.4-14.2c1.4-11.7-1.3-23.6-8.7-35.9zM24 37.7c-3.3 0-6-3-6-6.6 0-3.7 2.7-6.6 6-6.6 3.4 0 6.1 3 6 6.6 0 3.7-2.6 6.6-6 6.6zm23.1 0c-3.3 0-6-3-6-6.6 0-3.7 2.7-6.6 6-6.6 3.4 0 6.1 3 6 6.6 0 3.7-2.6 6.6-6 6.6z"/>
+              </svg>
+            </a>
+          </li>
         </ul>
       </nav>
     </div>
   </header>
 
-  <!-- Load libs (use HTTPS to avoid mixed-content issues) -->
+  <!-- Mobile drawer (hidden on desktop) -->
+  <aside id="mobile-drawer" class="drawer" aria-hidden="true">
+    <nav>
+      <ul class="drawer-nav">
+        <li><a href="/">Home</a></li> <!-- since logo opens menu on mobile, put Home here -->
+        <li><a href="#">About</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Members</a></li>
+        <li><a href="https://www.instagram.com/sear_ccsu/" target="_blank" rel="noopener">Instagram</a></li>
+        <li><a href="https://discord.gg/YOUR_INVITE_CODE" target="_blank" rel="noopener">Discord</a></li>
+      </ul>
+    </nav>
+  </aside>
+  <div id="drawer-backdrop" class="drawer-backdrop" tabindex="-1"></div>
+
+  <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
   <script src="https://threejs.org/examples/js/libs/stats.min.js"></script>
-  <!-- Your init -->
   <script src="app.js"></script>
 </body>
 </html>
