--- a/index.html
+++ b/index.html
@@ -51,31 +51,11 @@
   </div>
 </header>
 
-<!-- Mobile drawer (hidden on desktop) -->
-<aside id="mobile-drawer" class="drawer" aria-hidden="true">
-  <nav>
-    <ul class="drawer-nav">
-      <li><a href="./">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Blog</a></li>
-      <li><a href="#">Members</a></li>
-      <li>
-        <a href="https://www.instagram.com/sear_ccsu/" target="_blank" rel="noopener" aria-label="Instagram">
-          <svg class="instagram-logo" viewBox="0 0 24 24"><path fill="currentColor" d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 2.243 5 5 5h10c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zm0 2h10c1.654 0 3 1.346 3 3v10c0 1.654-1.346 3-3 3H7c-1.654 0-3-1.346-3-3V7c0-1.654 1.346-3 3-3zm5 2.5a5.5 5.5 0 100 11 5.5 5.5 0 000-11zm0 2a3.5 3.5 0 110 7 3.5 3.5 0 010-7zm5.25-2a1.25 1.25 0 100 2.5 1.25 1.25 0 000-2.5z"/></svg>
-          <span class="sr-only">Instagram</span>
-        </a>
-      </li>
-      <li>
-        <a href="https://discord.gg/YOUR_INVITE_CODE" target="_blank" rel="noopener" aria-label="Discord">
-          <svg class="discord-logo" viewBox="0 0 71 55"><path fill="currentColor" d="M60.1 4.9A58.12 58.12 0 0046.7 0l-2.2 4.5c-6.5-.9-13-.9-19.4 0L23 0a58.12 58.12 0 00-13.3 4.9C3.6 17.2 1 29.1 2.2 40.8A59.3 59.3 0 0019.6 55l3.1-5.3c-1.7-.6-3.3-1.4-4.9-2.4l1.1-.8c9.3 4.3 20.1 4.3 29.4 0l1.1.8c-1.6 1-3.2 1.8-4.9 2.4L51.4 55a59.3 59.3 0 0017.4-14.2c1.4-11.7-1.3-23.6-8.7-35.9zM24 37.7c-3.3 0-6-3-6-6.6 0-3.7 2.7-6.6 6-6.6 3.4 0 6.1 3 6 6.6 0 3.7-2.6 6.6-6 6.6zm23.1 0c-3.3 0-6-3-6-6.6 0-3.7 2.7-6.6 6-6.6 3.4 0 6.1 3 6 6.6 0 3.7-2.6 6.6-6 6.6z"/></svg>
-          <span class="sr-only">Discord</span>
-        </a>
-      </li>
-    </ul>
-  </nav>
-</aside>
-<div id="drawer-backdrop" class="drawer-backdrop" tabindex="-1"></div>
-
+<main>
+  <!-- HERO -->
+  <section class="hero">
+    <h1 class="hero-title">CCSU S.E.A.R.</h1>
+  </section>
 
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
