--- a/index.html
+++ b/index.html
@@ -1,65 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Sear Club</title>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <title>Sear Club</title>
 
-  <!-- Icons / Meta -->
-  <link rel="icon" href="SEAR_LOGO.jpg" type="image/jpeg" />
-  <link rel="apple-touch-icon" href="SEAR_LOGO.jpg" />
-  <meta name="theme-color" content="#0b1020" />
+        <!-- Icons / Meta -->
+        <link rel="icon" href="SEAR_LOGO.jpg" type="image/jpeg" />
+        <link rel="apple-touch-icon" href="SEAR_LOGO.jpg" />
+        <meta name="theme-color" content="#0b1020" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
-  <!-- Styles -->
-  <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
-  <!-- Full-screen particle background -->
-  <div id="particles-js"></div>
+        <!-- Styles -->
+        <link rel="stylesheet" href="styles.css" />
+    </head>
+    <body>
+        <!-- Full-screen particle background -->
+        <div id="particles-js"></div>
 
-  <!-- Optional FPS/particle counter -->
-  <div class="count-particles">
-    <span class="js-count-particles">--</span> particles
-  </div>
+        <!-- Optional FPS/particle counter -->
+        <div class="count-particles">
+            <span class="js-count-particles">--</span> particles
+        </div>
 
-<!-- Header -->
-<header class="header">
-  <div class="inner_header">
-    <!-- Logo: desktop = home, mobile = opens drawer -->
-    <a href="./" class="logo_container" id="logoToggle" aria-label="Sear Club Home / Menu">
-      <img src="SEAR_LOGO.jpg" alt="Site Logo" />
-    </a>
+        <!-- Header -->
+        <header class="header">
+            <div class="inner_header">
+                <!-- Logo: desktop = home, mobile = opens drawer -->
+                <a href="./" class="logo_container" id="logoToggle" aria-label="Sear Club Home / Menu">
+                    <img src="SEAR_LOGO.jpg" alt="Site Logo" />
+                </a>
 
-    <!-- Desktop nav (hidden on mobile) -->
-    <nav class="desktop-nav">
-      <ul class="nav">
-        <li><a href="#">About</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Members</a></li>
-        <li>
-          <a href="https://www.instagram.com/sear_ccsu/" target="_blank" rel="noopener" aria-label="Instagram">
-            <svg class="instagram-logo" viewBox="0 0 24 24"><path fill="currentColor" d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 2.243 5 5 5h10c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zm0 2h10c1.654 0 3 1.346 3 3v10c0 1.654-1.346 3-3 3H7c-1.654 0-3-1.346-3-3V7c0-1.654 1.346-3 3-3zm5 2.5a5.5 5.5 0 100 11 5.5 5.5 0 000-11zm0 2a3.5 3.5 0 110 7 3.5 3.5 0 010-7zm5.25-2a1.25 1.25 0 100 2.5 1.25 1.25 0 000-2.5z"/></svg>
-          </a>
-        </li>
-        <li>
-          <a href="https://discord.gg/YOUR_INVITE_CODE" target="_blank" rel="noopener" aria-label="Discord">
-            <svg class="discord-logo" viewBox="0 0 71 55"><path fill="currentColor" d="M60.1 4.9A58.12 58.12 0 0046.7 0l-2.2 4.5c-6.5-.9-13-.9-19.4 0L23 0a58.12 58.12 0 00-13.3 4.9C3.6 17.2 1 29.1 2.2 40.8A59.3 59.3 0 0019.6 55l3.1-5.3c-1.7-.6-3.3-1.4-4.9-2.4l1.1-.8c9.3 4.3 20.1 4.3 29.4 0l1.1.8c-1.6 1-3.2 1.8-4.9 2.4L51.4 55a59.3 59.3 0 0017.4-14.2c1.4-11.7-1.3-23.6-8.7-35.9zM24 37.7c-3.3 0-6-3-6-6.6 0-3.7 2.7-6.6 6-6.6 3.4 0 6.1 3 6 6.6 0 3.7-2.6 6.6-6 6.6zm23.1 0c-3.3 0-6-3-6-6.6 0-3.7 2.7-6.6 6-6.6 3.4 0 6.1 3 6 6.6 0 3.7-2.6 6.6-6 6.6z"/></svg>
-          </a>
-        </li>
-      </ul>
-    </nav>
-  </div>
-</header>
+                <!-- Desktop nav (hidden on mobile) -->
+                <nav class="desktop-nav">
+                    <ul class="nav">
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Members</a></li>
+                        <li>
+                            <a href="https://www.instagram.com/sear_ccsu/" target="_blank" rel="noopener" aria-label="Instagram">
+                                <svg class="instagram-logo" viewBox="0 0 24 24"><path fill="currentColor" d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 2.243 5 5 5h10c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zm0 2h10c1.654 0 3 1.346 3 3v10c0 1.654-1.346 3-3 3H7c-1.654 0-3-1.346-3-3V7c0-1.654 1.346-3 3-3zm5 2.5a5.5 5.5 0 100 11 5.5 5.5 0 000-11zm0 2a3.5 3.5 0 110 7 3.5 3.5 0 010-7zm5.25-2a1.25 1.25 0 100 2.5 1.25 1.25 0 000-2.5z"/></svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://discord.gg/YOUR_INVITE_CODE" target="_blank" rel="noopener" aria-label="Discord">
+                                <svg class="discord-logo" viewBox="0 0 71 55"><path fill="currentColor" d="M60.1 4.9A58.12 58.12 0 0046.7 0l-2.2 4.5c-6.5-.9-13-.9-19.4 0L23 0a58.12 58.12 0 00-13.3 4.9C3.6 17.2 1 29.1 2.2 40.8A59.3 59.3 0 0019.6 55l3.1-5.3c-1.7-.6-3.3-1.4-4.9-2.4l1.1-.8c9.3 4.3 20.1 4.3 29.4 0l1.1.8c-1.6 1-3.2 1.8-4.9 2.4L51.4 55a59.3 59.3 0 0017.4-14.2c1.4-11.7-1.3-23.6-8.7-35.9zM24 37.7c-3.3 0-6-3-6-6.6 0-3.7 2.7-6.6 6-6.6 3.4 0 6.1 3 6 6.6 0 3.7-2.6 6.6-6 6.6zm23.1 0c-3.3 0-6-3-6-6.6 0-3.7 2.7-6.6 6-6.6 3.4 0 6.1 3 6 6.6 0 3.7-2.6 6.6-6 6.6z"/></svg>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
 
-<main>
-  <!-- HERO -->
-  <section class="hero">
-    <h1 class="hero-title">CCSU S.E.A.R.</h1>
-  </section>
+        <main>
+            <!-- HERO -->
+            <section class="hero">
+                <h1 class="hero-title">CCSU S.E.A.R.</h1>
+            </section>
 
-  <!-- Scripts -->
-  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-  <script src="https://threejs.org/examples/js/libs/stats.min.js"></script>
-  <script src="app.js?v=3"></script>
-</body>
+            <!-- Scripts -->
+            <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+            <script src="https://threejs.org/examples/js/libs/stats.min.js"></script>
+            <script src="app.js?v=3"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    </body>
 </html>
